--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Child Watch Bermuda</title>
+    <title>Childwatch Bermuda</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Welcome to Child Watch Bermuda</h1>
+    <div class="container">
+      <div class="navbar">
+        <div class="menu-logo">Childwatch Bermuda</div>
+        <ul class="menu-items">
+          <li class="menu-item">Home</li>
+          <li class="menu-item">About</li>
+          <li class="menu-item">Our Mission</li>
+        </ul>
+      </div>
+      <div class="hero-content">
+        <div class="title">
+          <img src="img/bermuda-map.svg" alt="" />
+        </div>
+        <div class="quote">
+          <i>“One man can make a difference, every man should make an effort”</i
+          ><br />
+          <b>-- John F. Kennedy</b>
+        </div>
+        <div class="mission-button"><button>Mission Statement</button></div>
+        <div class="pic">
+          <img src="img/image1.svg" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
