--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="navbar">
-        <div class="menu-logo">Childwatch Bermuda</div>
-        <ul class="menu-items">
-          <li class="menu-item">Home</li>
-          <li class="menu-item">About</li>
-          <li class="menu-item">Our Mission</li>
-        </ul>
+    <div class="navbar">
+      <div class="menu-logo">
+        <img
+          style="padding-right: 1px"
+          width="70"
+          src="img/childwatch-map 1.svg"
+          alt=""
+        />
+        Childwatch Bermuda
       </div>
+      <ul class="menu-items">
+        <li class="menu-item">Home</li>
+        <li class="menu-item">About</li>
+        <li class="menu-item">Our Mission</li>
+      </ul>
+    </div>
+    <div class="container">
       <div class="hero-content">
         <div class="title">
           <img src="img/bermuda-map.svg" alt="" />
@@ -27,7 +35,7 @@
           <b>-- John F. Kennedy</b>
         </div>
         <div class="mission-button"><button>Mission Statement</button></div>
-        <div class="pic">
+        <div class="pic fade-in-image">
           <img src="img/image1.svg" alt="" />
         </div>
       </div>
