adjusted padding on hero section

--- a/navbar.html
+++ b/navbar.html
@@ -7,8 +7,10 @@
   />
   Childwatch Bermuda
 </div>
-<ul class="menu-items">
-  <li class="menu-item">Home</li>
-  <li class="menu-item">About</li>
-  <li class="menu-item">Our Mission</li>
-</ul>
+<div>
+  <ul class="menu-items">
+    <li class="menu-item">Home</li>
+    <li class="menu-item">About</li>
+    <li class="menu-item">Our Mission</li>
+  </ul>
+</div>
