reduced image size

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="mission-button"><button>Mission Statement</button></div>
         <div class="pic fade-in-image">
-          <img src="img/image1.svg" alt="" />
+          <img src="img/family.svg" alt="" />
         </div>
       </div>
     </div>
