adjusted .container height

--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript">
+      alert(screen.width, screen.height);
+    </script>
   </body>
 </html>
