made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -25,22 +25,18 @@
       </ul>
     </div>
     <div class="container">
-      <div class="hero-container">
-        <div class="hero-content">
-          <div class="title">
-            <img src="img/bermuda-map.svg" alt="" />
-          </div>
-          <div class="quote">
-            <i
-              >“One man can make a difference, every man should make an
-              effort”</i
-            ><br />
-            <b>-- John F. Kennedy</b>
-          </div>
-          <div class="mission-button"><button>Mission Statement</button></div>
-          <div class="pic fade-in-image">
-            <img src="img/family.svg" alt="" />
-          </div>
+      <div class="hero-content">
+        <div class="title">
+          <img src="img/bermuda-map.svg" alt="" />
+        </div>
+        <div class="quote">
+          <i>“One man can make a difference, every man should make an effort”</i
+          ><br />
+          <b>-- John F. Kennedy</b>
+        </div>
+        <div class="mission-button"><button>Mission Statement</button></div>
+        <div class="pic fade-in-image">
+          <img src="img/family.svg" alt="" />
         </div>
       </div>
     </div>
