made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <img src="img/family.svg" alt="" />
         </div>
       </div>
+      <div style="height:90vh; width:100vw; background: #ccc;"><h1>Next Page</h1></div>
     </div>
   </body>
 </html>
