--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
       </div>
       <div style="height:90vh; width:100vw; background: #ccc;"><h1>Next Page</h1></div>
     </div>
+    <script defer type="text/javascript">
+      alert(screen.width + " " + screen.height)
+    </script>
   </body>
 </html>
