made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         ><br />
         <b>-- John F. Kennedy</b>
       </div>
-      <div class="mission-button"><button>Mission Statement</button></div>
+      <div class="mission-button"><button>About us</button></div>
       <div class="pic fade-in-image">
         <img src="img/family.svg" alt="" />
       </div>
     </div>
-    
+
     <div style="height:90vh; width:100vw; background: #ccc;"><h1>Next Page</h1></div>
   </div>
   </body>
