made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   </head>
   <div class="navbar">
     <div class="menu-logo">
-      <img
+      <a href="">
+       <img
         style="padding-right: 1px"
         width="70"
         src="img/childwatch-map 1.svg"
         alt=""
       />
-      Childwatch Bermuda
+      Childwatch Bermuda 
+      </a>
+      
     </div>
     <ul class="menu-items">
       <li class="menu-item">Home</li>
