--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
   </head>
   <div class="navbar">
     <div class="menu-logo">
-      <a href="">
-       <img
-        style="padding-right: 1px"
-        width="70"
-        src="img/childwatch-map 1.svg"
-        alt=""
-      />
-      Childwatch Bermuda 
-      </a>
+      <span id="menu-logo-image">
+        <img
       
+          src="img/childwatch-map 1.svg"
+          alt=""
+        />
+        Childwatch Bermuda  
+      </span>
+ 
     </div>
     <ul class="menu-items">
       <li class="menu-item">Home</li>
@@ -43,7 +42,9 @@
       </div>
     </div>
 
-    <div style="height:90vh; width:100vw; background: #ccc;"><h1>Next Page</h1></div>
+    <!-- <div style="height:90vh; width:100vw; background: #ccc;"><h1>Next Page</h1></div> -->
   </div>
+
+  <script defer src="./app.js" type="text/javascript"></script>
   </body>
 </html>
