--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <!-- <div style="height:90vh; width:100vw; background: #ccc;"><h1>Next Page</h1></div> -->
+    <div style="height:90vh; width:100vw; background: #ccc;"><h1>Next Page</h1></div>
   </div>
 
   <script defer src="./app.js" type="text/javascript"></script>
