--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <div class="mission-button"><button>About us</button></div>
       <div class="pic fade-in-image">
         <img src="img/family.svg" alt="" />
+        <img hidden src="img/family-mobile.svg" alt="" />
       </div>
     </div>
 
