made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </div>
       <div class="mission-button"><button>About us</button></div>
       <div class="pic fade-in-image">
-        <img src="img/family.svg" alt="" />
-        <img hidden src="img/family-mobile.svg" alt="" />
+        <img class="normal-pic" src="img/family.svg" alt="" />
+        <img class="mobile-pic" hidden src="img/family-mobile.svg" alt="" />
       </div>
     </div>
 
