made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="mission-button"><button>About us</button></div>
       <div class="pic fade-in-image">
-        <img class="normal-pic" src="img/family.svg" alt="" />
+        <!-- <img class="normal-pic" src="img/family.svg" alt="" /> -->
         <img class="mobile-pic" hidden src="img/family-mobile.svg" alt="" />
       </div>
     </div>
