made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   <div class="container">
     <div class="hero-content">
       <div class="title">
-        <img src="img/bermuda-map.svg" alt="" />
+        <img class="normal-pic" src="img/bermuda-map.svg" alt="" />
+        <img class="mobile-pic" hidden src="img/family-mobile.svg" alt="" />
+
       </div>
       <div class="quote">
         <i>“One man can make a difference, every man should make an effort”</i
@@ -38,8 +40,7 @@
       </div>
       <div class="mission-button"><button>About us</button></div>
       <div class="pic fade-in-image">
-        <!-- <img class="normal-pic" src="img/family.svg" alt="" /> -->
-        <img class="mobile-pic" hidden src="img/family-mobile.svg" alt="" />
+        <img src="img/family.svg" alt="" />
       </div>
     </div>
 
