made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
   <div class="container">
     <div class="hero-content">
       <div class="title">
-        <!-- <img class="normal-pic" src="img/bermuda-map.svg" alt="" /> -->
-        <img class="mobile-pic" hidden src="img/family-mobile.svg" alt="" />
+        <img class="normal-pic" src="img/bermuda-map.svg" alt="" />
 
       </div>
       <div class="quote">
