made .navbar fixed

--- a/test.html
+++ b/test.html
@@ -6,37 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="test.css" />
+    <link rel="stylesheet" href="css/test.css" />
   </head>
   <body>
-    <div class="container">
-      <div>
-        <div id="navbar">
-          <ul class="menu-items">
-            <li class="menu-item">Home</li>
-            <li class="menu-item">About</li>
-            <li class="menu-item">Our Mission</li>
-          </ul>
-        </div>
-      </div>
-
-      <div id="main">
-        <p style="height: 300px; background-color: orange">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet iure
-          enim totam perspiciatis deserunt voluptatibus quasi corrupti
-          voluptatem, magnam dignissimos molestiae, quis nisi officiis nostrum!
-        </p>
-        <p style="height: 300px; background-color: orange">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet iure
-          enim totam perspiciatis deserunt voluptatibus quasi corrupti
-          voluptatem, magnam dignissimos molestiae, quis nisi officiis nostrum!
-        </p>
-        <p style="height: 300px; background-color: orange">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet iure
-          enim totam perspiciatis deserunt voluptatibus quasi corrupti
-          voluptatem, magnam dignissimos molestiae, quis nisi officiis nostrum!
-        </p>
+    <div class="navbar">
+      <div class="container flex">
+        <h2>Childwatch Bermuda</h2>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
     </div>
+
+    <!-- Showcase -->
+    <section class="showcase">
+      <div class="container grid">
+        <div class="showcase-text">
+          <div class="heading">About Childwatch Bermuda</div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+            itaque obcaecati voluptatem nostrum blanditiis laborum, aliquid
+            tempora rem a! Atque, quas eaque? Non eius, placeat nobis quos
+            tempora quas ullam.
+          </p>
+        </div>
+        <div>
+          <p>
+             <img src="/img/family.svg"><div></div>
+          </p>
+         
+      </div>
+    </section>
   </body>
 </html>
