--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
         
           <div class="heading">
             <span style="display:flex; align-items:center">
-              <img style="width:100px; height:100px" src="/img/bdamap.svg" alt="">
+              <img class="bdamap" style="width:100px; height:100px" src="/img/bdamap.svg" alt="">
               About Childwatch Bermuda
             </span> 
           </div>
