--- a/test.html
+++ b/test.html
@@ -9,34 +9,52 @@
     <link rel="stylesheet" href="css/test.css" />
   </head>
   <body>
-    <div class="navbar">
-      <div class="container flex">
-        <h2>Childwatch Bermuda</h2>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Contact us</a></li>
-        </ul>
+    <div class="wrapper">
+      <div class="navbar">
+        <div class="container flex">
+          <h2>Childwatch Bermuda</h2>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
 
-    <!-- Showcase -->
-    <section class="showcase">
-      <div class="container grid">
-        <div  class="showcase-text">
-        
-          <div class="heading">
-            <span style="display:flex; align-items:center">
-              <img class="bdamap" src="/img/bdamap.svg" alt="">
-              About Childwatch Bermuda
-            </span> 
+      <!-- Showcase -->
+      <section class="showcase">
+        <div class="container grid">
+          <div class="showcase-text">
+            <div class="heading">
+              <span style="display: flex; align-items: center">
+                <img class="bdamap" src="/img/bdamap.svg" alt="" />
+                About Childwatch Bermuda
+              </span>
+            </div>
+            <p style="text-align: justify">
+              Childwatch is an action group of concerned parents, initially
+              Fathers, with the aim to affect change in the laws and socitiey’s
+              views on the rights of a single father to actively share in the
+              day-to-day rearing of their children and, to even be the primary
+              caregiver
+            </p>
           </div>
-          <p style="text-align: justify;"> 
-            Childwatch is an action group of concerned parents, initially Fathers, with the aim to affect change in the laws and socitiey’s views on the rights of a single father to actively share in the day-to-day rearing of their children and, to even be the primary caregiver
+          <div style="justify-content: right">
+            <img class="showcase-pic" src="/img/family.svg" />
+            <div></div>
+          </div>
+          <p style="text-align: justify">
+            Childwatch is an action group of concerned parents, initially
+            Fathers, with the aim to affect change in the laws and socitiey’s
+            views on the rights of a single father to actively share in the
+            day-to-day rearing of their children and, to even be the primary
+            caregiver
           </p>
         </div>
-        <div style="justify-content: right;">
-             <img class="showcase-pic"  src="/img/family.svg"><div></div>   
-      </div>
-    </section>
+        <div style="justify-content: right">
+          <img class="showcase-pic" src="/img/family.svg" />
+          <div></div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
