made .navbar fixed

--- a/test.html
+++ b/test.html
@@ -10,7 +10,6 @@
   </head>
   <body>
     <div class="wrapper">
-
       <div class="navbar">
         <div class="container flex">
           <h2>Childwatch Bermuda</h2>
@@ -20,27 +19,61 @@
           </ul>
         </div>
       </div>
-  
+
       <!-- Showcase -->
       <section class="showcase">
         <div class="container grid">
-          <div  class="showcase-text">
-          
+          <div class="showcase-text">
             <div class="heading">
-              <span style="display:flex; align-items:center">
-                <img class="bdamap" style="width:100px; height:100px"¸¸¸¸¸¸¸¸¸¸ src="/img/bdamap.svg" alt="">
+              <span style="display: flex; align-items: center">
+                <img
+                  class="bdamap"
+                  style="width: 100px; height: 100px"
+                  ¸¸¸¸¸¸¸¸¸¸
+                  src="/img/bdamap.svg"
+                  alt=""
+                />
                 About Childwatch Bermuda
-              </span> 
+              </span>
             </div>
-            <p style="text-align: justify;"> 
-              Childwatch is an action group of concerned parents, initially Fathers, with the aim to affect change in the laws and socitiey’s views on the rights of a single father to actively share in the day-to-day rearing of their children and, to even be the primary caregiver
+            <p style="text-align: justify">
+              Childwatch is an action group of concerned parents, initially
+              Fathers, with the aim to affect change in the laws and socitiey’s
+              views on the rights of a single father to actively share in the
+              day-to-day rearing of their children and, to even be the primary
+              caregiver
             </p>
           </div>
-          <div style="justify-content: right;">
-               <img class="showcase-pic"  src="/img/family.svg"><div></div>   
+          <div style="justify-content: right">
+            <img class="showcase-pic" src="/img/family.svg" />
+            <div></div>
+          </div>
+
+          <div class="heading">
+            <span style="display: flex; align-items: center">
+              <img
+                class="bdamap"
+                style="width: 100px; height: 100px"
+                ¸¸¸¸¸¸¸¸¸¸
+                src="/img/bdamap.svg"
+                alt=""
+              />
+              About Childwatch Bermuda
+            </span>
+          </div>
+          <p style="text-align: justify">
+            Childwatch is an action group of concerned parents, initially
+            Fathers, with the aim to affect change in the laws and socitiey’s
+            views on the rights of a single father to actively share in the
+            day-to-day rearing of their children and, to even be the primary
+            caregiver
+          </p>
+        </div>
+        <div style="justify-content: right">
+          <img class="showcase-pic" src="/img/family.svg" />
+          <div></div>
         </div>
       </section>
     </div>
- 
   </body>
 </html>
