made .navbar fixed

--- a/test.html
+++ b/test.html
@@ -59,5 +59,9 @@
              <img class="showcase-pic"  src="/img/family.svg"><div></div>   
       </div>
     </section>
+
+    <script>
+      alert(screen.width)
+    </script>
   </body>
 </html>
