--- a/test.html
+++ b/test.html
@@ -47,8 +47,8 @@
         
           <div class="heading">
             <span style="display:flex; align-items:center">
-              <img class="bdamap" style="width:100px; height:100px"¸¸¸¸¸¸¸¸¸¸ src="/img/bdamap.svg" alt="">
-              About Childwatch Bermuda
+              <img class="bdamap" style="width:100px; height:100px" src="/img/bdamap.svg" alt="">
+              <span class="showcase-title">Childwatch Bermuda </span>
             </span> 
           </div>
           <p style="text-align: justify;"> 
@@ -60,8 +60,6 @@
       </div>
     </section>
 
-    <script>
-      // alert(screen.width)
-    </script>
+  
   </body>
 </html>
