made .navbar fixed

--- a/test.html
+++ b/test.html
@@ -29,8 +29,10 @@
         
           <div class="heading">
             <span style="display:flex; align-items:center">
-              <img class="bdamap" style="width:100px; height:100px"¸¸¸¸¸¸¸¸¸¸ src="/img/bdamap.svg" alt="">
-              About Childwatch Bermuda
+              <img class="bdamap"  src="/img/bdamap.svg" alt="">
+              <span class="showcase-title">
+                About Childwatch Bermuda
+              </span>  
             </span> 
           </div>
           <p style="text-align: justify;"> 
@@ -48,7 +50,7 @@
           <div class="heading">
             <span style="display:flex; align-items:center">
               <img class="bdamap" style="width:100px; height:100px" src="/img/bdamap.svg" alt="">
-              <span class="showcase-title">Childwatch Bermuda </span>
+              <span class="showcase-title">Childwatch Bermuda</span>
             </span> 
           </div>
           <p style="text-align: justify;"> 
