made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Childwatch Bermuda</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <div class="navbar">
+  <div class="navbar container">
     <div class="menu-logo">
       <span id="menu-logo-image">
         <img
