made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div class="navbar container">
     <div class="menu-logo">
       <span id="menu-logo-image">
-        <img
+        <!-- <img
           src="img/childwatch-map 1.svg"
           alt=""
-        />
+        /> -->
         Childwatch Bermuda  
       </span>
  
