--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="hero-content">
       <div class="title">
-        <img class="normal-pic" src="img/bermuda-map.svg" alt="" />
+        <img class="fade-in-image" src="img/bermuda-map.svg" alt="" />
 
       </div>
       <div class="quote">
