--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Childwatch Bermuda</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"> 
   </head>
   <div class="navbar container">
     <div class="menu-logo">
@@ -28,15 +29,16 @@
   <div class="container">
     <div class="hero-content">
       <div class="title">
-        <img class="fade-in-image" src="img/bermuda-map.svg" alt="" />
+        <img class="" src="img/bermuda-map.svg" alt="" />
 
       </div>
       <div class="quote">
         <i>“One man can make a difference, every man should make an effort”</i
         ><br />
         <b>-- John F. Kennedy</b>
+        
       </div>
-      <div class="mission-button"><button>About us</button></div>
+      <div class="mission-button"><i class="fa-solid fa-chevron-down"></i></div>
       <div class="pic fade-in-image">
         <img src="img/family.svg" alt="" />
       </div>
@@ -46,5 +48,6 @@
   </div>
 
   <script defer src="./app.js" type="text/javascript"></script>
+
   </body>
 </html>
