made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <b>-- John F. Kennedy</b>
         
       </div>
-      <div class="mission-button"><i class="fa-solid fa-chevron-down"></i></div>
+      <div class="mission-button"><a href="#about"><i id="next-btn" class="fa-solid fa-chevron-down"></i></a></div>
       <div class="pic fade-in-image">
         <img src="img/family.svg" alt="" />
       </div>
@@ -47,7 +47,9 @@
     <!-- <div style="height:90vh; width:100vw; background: #ccc;"><h1>Next Page</h1></div> -->
   </div>
 
-  <script defer src="./app.js" type="text/javascript"></script>
+  <!-- About Page -->
+  <div id="about"style="padding-top:70px;"class="bg-w container"><h1>About us</h1></div>
+  <!-- <script defer src="./app.js" type="text/javascript"></script> -->
 
   </body>
 </html>
