made .navbar fixed

--- a/index.html
+++ b/index.html
@@ -27,22 +27,25 @@
   </div>  
 
   <div class="container">
-    <div class="hero-content">
-      <div class="title">
-        <img class="" src="img/bermuda-map.svg" alt="" />
-
-      </div>
-      <div class="quote">
-        <i>“One man can make a difference, every man should make an effort”</i
-        ><br />
-        <b>-- John F. Kennedy</b>
-        
-      </div>
-      <div class="mission-button"><a href="#about"><i id="next-btn" class="fa-solid fa-chevron-down"></i></a></div>
-      <div class="pic fade-in-image">
-        <img src="img/family.svg" alt="" />
+    <div>
+      <div class="hero-content">
+        <div class="title">
+          <img class="" src="img/bermuda-map.svg" alt="" />
+  
+        </div>
+        <div class="quote">
+          <i>“One man can make a difference, every man should make an effort”</i
+          ><br />
+          <b>-- John F. Kennedy</b>
+          
+        </div>
+        <div class="mission-button"><a href="#about"><i id="next-btn" class="fa-solid fa-chevron-down"></i></a></div>
+        <div class="pic fade-in-image">
+          <img src="img/family.svg" alt="" />
+        </div>
       </div>
     </div>
+
 
     <!-- <div style="height:90vh; width:100vw; background: #ccc;"><h1>Next Page</h1></div> -->
   </div>
