--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 
   <!-- About Page -->
-  <div id="about"style="padding-top:70px;"class="bg-w container"><h1>About us</h1></div>
+  <div id="about"style="padding-top:70px; background:gray"class="container"><h1>About us</h1></div>
   <!-- <script defer src="./app.js" type="text/javascript"></script> -->
 
   </body>
