--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
   <!-- About Page -->
   <div id="about"style="padding-top:70px; background:gray"class="container"><h1>About us</h1></div>
   <!-- <script defer src="./app.js" type="text/javascript"></script> -->
+<script src="./app.js">
 
+</script>
   </body>
 </html>
