--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
           <b>-- John F. Kennedy</b>
           
         </div>
-        <div class="mission-button"><a href="#about"><i id="next-btn" class="fa-solid fa-chevron-down"></i></a></div>
+        <div class="mission-button">
+          <a href="#about">
+            <i id="next-btn" class="fa-solid fa-chevron-down"></i>
+          </a>
+        </div>
         <div class="pic fade-in-image">
           <img src="img/family.svg" alt="" />
         </div>
