--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div>
       <div class="hero-content">
         <div class="title">
-          <img class="map" src="img/bermuda-map.svg" alt="" />
+          <img class="map" src="img/bermuda-map.svg" alt="map of Bermuda" />
   
         </div>
         <div class="quote">
