--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         Childwatch Bermuda  
       </span>
     </div>
-    <ul class="menu-items">
+    <ul class="menu-items" >
       <li class="menu-item">Home</li>
       <li class="menu-item">About</li>
       <li class="menu-item">Our Mission</li>
@@ -35,7 +35,9 @@
           
         </div>
         <div class="mission-button">
+          <a href="#about">
             <i id="next-btn" class="fa-solid fa-chevron-down"></i>
+          </a>
         </div>
         <div class="pic fade-in-image">
           <img src="img/family.svg" alt="" />
