--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   </head>
   <div class="navbar container">
     <div class="menu-logo">
-      <span id="menu-logo-image">
-        Childwatch Bermuda  
-      </span>
+        </span>Childwatch </span>  
+     
     </div>
     <ul class="menu-items" >
       <li class="menu-item">Home</li>
