--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       <li class="menu-item">About</li>
       <li class="menu-item">Our Mission</li>
     </ul>
+
+      <div class="hamburger-icon">
+        <div class="hamburger"></div>
+        <div class="hamburger"></div>
+        <div class="hamburger"></div>
+      </div>
+
   </div>  
 
   <div class="container">
