map not showing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <img class="hero-image" src="./img/hero-image.svg" alt="" />
         </div>
         <div class="hero-top-right">
-          <div class="hero-title-top">ChildWatch Bermuda</div>
+          <div class="hero-title-top">ChildWatch<br />Bermuda</div>
         </div>
       </div>
       <div class="hero-bottom">
