map not showing

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
           <img src="./img/squiggle.svg" alt="sguiggly underline">
         </div>
         <div class="hero-bottom-right"></div>
-      
+      <script>
+        alert(screen.width)
+      </script>
     </div>
   </body>
 </html>
