map not showing

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       </div>
       <div class="hero-bottom">
         <div class="hero-bottom-left">
-          <p>
+          <p class = "text-header">What we do</p>
+          <p class="text-body">
             ChildWatch are advocates for Shared Parenting laws, in order to provide equal access to both parents for children of divorced parents
           </p>
-          <br>
-          <img src="./img/squiggle.svg" alt="sguiggly underline">
+          <!-- <img src="./img/squiggle.svg" alt="sguiggly underline"> -->
         </div>
         <div class="hero-bottom-right"></div>
       <script>
