--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <div style="height:100vh; width:1440px;">
+    <div style="height:100vh">
       <div class="navbar">
         <div class="nav-menu-wrapper">
           <div class="menu-logo">
