map not showing

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
               </p>    
         
           </div>
-          <!-- <div class="hero-bottom-right"></div> -->
+          <div class="hero-bottom-right">
+            PLACE CONTENT HERE
+          </div>
   
     </div>
     </div>
