map not showing

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         
           </div>
           <div class="hero-bottom-right">
-            <h1>CONTENT GOES HERE</h1>
+            <button id="learn-more-btn">Learn More About Us</button>
           </div>
     </div>
 
