--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </div>
       </div>
-  
+      <div class="main-wrapper">
       <div class="hero">
         <div id="hero-top" class="hero-top">
           <div class="hero-top-left">
@@ -51,9 +51,15 @@
         
           </div>
           <div class="hero-bottom-right">
-            <button id="learn-more-btn">Learn More About Us</button>
+            <button id="learn-more-btn">Learn More</button>
           </div>
     </div>
+      </div>
+      <div style="height:100vh">
+      <h1>About</h1>
+      </div>
+
+
 
     </div>
         <script>
