map not showing

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
     </div>
       </div>
-      <div style="height:100vh; ">
+      <div style="height:100vh; background-color:white ">
       <h1>About</h1>
       </div>
 
