map not showing

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
     </div>
       </div>
-      <div style="height:100vh; background-color:white ">
+      <div style="height:100vh; background-color: white; padding-top: calc(var(--nav-height) + 1.7rem);">
       <h1>About</h1>
       </div>
 
