--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
           <div class="menu-logo">
             <span>Childwatch </span>
           </div>
-          <ul class="menu-items">
+          <ul style="visibility:hidden" class="menu-items">
             <li class="menu-item">Home</li>
             <li class="menu-item">About</li>
             <li class="menu-item">Our Mission</li>
             <li class="menu-item">Research</li>
           </ul>
+          <img  src="./img/hamburger.svg" alt="">
+
         </div>
       </div>
     
