change mobile button size

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="hero">
         <div id="hero-top" class="hero-top">
           <div class="hero-top-left">
-            <img id="img" class="hero-image" src="./img/hero-image.svg" alt="" />
+            <img id="hero-img" class="hero-image" src="./img/hero-image.svg" alt="" />
           </div>
 
           <div class="hero-top-right">
@@ -59,7 +59,7 @@
       </div>
 
         <script>
-        const img = document.querySelector("img");
+        const img = document.querySelector("hero-img");
         img.addEventListener("click", () => { alert(screen.width + " x "  + screen.height)});
       </script>
   
