change mobile button size

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li class="menu-item">Our Mission</li>
             <li class="menu-item">Research</li>
           </ul>
-          <img  style="visibility:hidden" id="hamburger" src="./img/hamburger.svg" alt="">
+          <img hidden id="hamburger" src="./img/hamburger.svg" alt="">
 
         </div>
       </div>
@@ -59,7 +59,7 @@
       </div>
 
         <script>
-        const img = document.querySelector("hero-img");
+        const img = document.querySelector("#hero-img");
         img.addEventListener("click", () => { alert(screen.width + " x "  + screen.height)});
       </script>
   
