change mobile button size

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li class="menu-item">Our Mission</li>
             <li class="menu-item">Research</li>
           </ul>
-          <img hidden id="hamburger" src="./img/hamburger.svg" alt="">
+          <img style="visibility:hidden" id="hamburger" src="./img/hamburger.svg" alt="">
 
         </div>
       </div>
