change mobile button size

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   </head>
   <body>
 
-    <div id="overlay" class="mobile-overlay">OVERLAY</div> 
+    <div id="overlay" class="mobile-overlay">
+      <div style="display:flex" class="close-btn"> <img src="./img/ep_circle-close.svg" alt=""> </div>
+    </div> 
 
-  
     <div style="height: 100vh">
       <div class="navbar">
         <div class="nav-menu-wrapper">
