change mobile button size

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
   <body>
 
     <div id="overlay" class="mobile-overlay">
-      <div style="display:flex" class="close-btn"> <img src="./img/ep_circle-close.svg" alt=""> </div>
+      <div style="display:flex" class="close-btn"> 
+        <img src="./img/ep_circle-close.svg" alt="">
+      </div>
+      <div class="overlay-menu">
+        <div>PLACE MENU ITEMS HERE</div>
+      </div>
     </div> 
+  
 
     <div style="height: 100vh">
       <div class="navbar">
