--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <div id="overlay" class="mobile-overlay">
-      <div style="display:flex" class="close-btn"> 
+      <div class="close-btn"> 
         <img src="./img/ep_circle-close.svg" alt="">
       </div>
       <div class="overlay-menu">
