change mobile button size

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
 
       hamburg.addEventListener("click", () => {
-        console.log("clicked hamburger");
         overlay.style.display = "flex";
+        overlay.style.height = "100%;"
 
       })
 
