change mobile button size

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       hamburg.addEventListener("click", () => {
         overlay.style.display = "flex";
-        overlay.style.height = "100%;"
+        overlay.style.max-height = "100vh;"
 
       })
 
