change mobile button size

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
       hamburg.addEventListener("click", () => {
         overlay.style.display = "flex";
-        overlay.style.max-height = "100vh;"
-
+        overlay.style.maxHeight = "100vh";
+;
       })
 
        menu_close.addEventListener("click", () => {
