change mobile button size

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       hamburg.addEventListener("click", () => {
         overlay.style.display = "flex";
-        overlay.style.maxHeight = "100vh";
+        overlay.style.height = "100vh";
       })
 
        menu_close.addEventListener("click", () => {
