change mobile button size

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div> 
   
 
-    <div style="height: 100vh">
+    <div class="main-wrapper" style="height: 100vh">
       <div class="navbar">
         <div class="nav-menu-wrapper">
           <div class="menu-logo">
