--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           <button id="learn-more-btn">Learn More</button>
         </div>
       </div>
+      <div style="height:90vh; background-color: #FFFFFF">ABOUT</div>
     </div>
 
     <script>
