change mobile button size

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 
 
       hamburg.addEventListener("click", () => {
-        overlay.style.display = "flex";
+        overlay.style.transform = "translate3d(0vw,0,0)";
         // overlay.style.maxHeight = "100%";
       })
 
       learmore.addEventListener("click", () => {alert('Learn More')})
 
        menu_close.addEventListener("click", () => {
-        overlay.style.display = "none";
+        overlay.style.transform = "translate3d(-100vw,0,0)";
 
       })
 
