change mobile button size

--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
           <button id="learn-more-btn">Learn More</button>
         </div>
       </div>
+      <div class="more-info">
+        <span>Why we formed</span>
+      </div>
     </div>
 
-    <script src="./main.js">
-     
-    </script>
+    <script defer src="./main.js"></script>
   </body>
 </html>
