change mobile button size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="navbar">
         <div class="nav-menu-wrapper">
           <div class="menu-logo">
-            <span style="display:flex; align-items:center;"><img style="width:50px; height:50px" src="./img/Bermuda.svg" /> ChildWatch BDA.</span>
+            <span>CHILDWATCH BDA</span>
           </div>
           <ul class="menu-items">
             <li class="menu-item">Home</li>
