change mobile button size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         <img id="menu-close-btn" src="./img/ep_circle-close.svg" alt="">
       </div>
       <div class="overlay-menu">
-        <div>PLACE MENU ITEMS HERE</div>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Objectives / Mission</li>
+          <li>Research</li>
+        </ul>
       </div>
     </div> 
   
