change mobile button size

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       <div class="overlay-menu">
         <ul>
           <li>Home</li>
-          <li>About</li>
-          <li>Objectives / Mission</li>
+          <li>About us</li>
+          <li>Objectives and Mission</li>
           <li>Research</li>
+          <li>Contact us</li>
         </ul>
       </div>
     </div> 
@@ -35,10 +36,11 @@
             <span>CHILDWATCH BDA</span>
           </div>
           <ul class="menu-items">
-            <li class="menu-item">Home</li>
-            <li class="menu-item">About</li>
-            <li class="menu-item">Our Mission</li>
-            <li class="menu-item">Research</li>
+       <li>Home</li>
+          <li>About us</li>
+          <li>Objectives and Mission</li>
+          <li>Research</li>
+          <li>Contact us</li>
           </ul>
           <div class="hamburger">
           <img id="hamburg" src="./img/hamburger.svg" alt="" />
