change mobile button size

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       </div>
       <div class="overlay-menu">
         <ul>
-          <li>Home</li>
-          <li>About us</li>
-          <li>Objectives and Mission</li>
+         <li>Home</li>
+          <li>Objectives</li>
           <li>Research</li>
           <li>Contact us</li>
         </ul>
@@ -34,9 +33,8 @@
             <span>CHILDWATCH BDA</span>
           </div>
           <ul class="menu-items">
-       <li>Home</li>
-          <li>About us</li>
-          <li>Objectives and Mission</li>
+            <li>Home</li>
+          <li>Objectives</li>
           <li>Research</li>
           <li>Contact us</li>
           </ul>
@@ -78,6 +76,10 @@
           <button id="learn-more-btn">Learn More</button>
         </div>
       </div>
+      <div class="vh90">
+        <h1>More Info</h1>
+      </div>
+
     <script defer src="./main.js"></script>
   </body>
 </html>
