--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <div class="hero-bottom">
         <div class="hero-bottom-left">
-          <p class="text-header">About Us</p>
+          <p class="text-header">About us</p>
           <p class="text-body">
             ChildWatch is an all volunteer non-profit self-funded action group of concerned parents, initially fathers, serving the citizens of Bermuda and Bermudian overseas. Our aim is to effect change in the laws, and society's views
             on the rights of single and divorced fathers, to actively share in
@@ -76,8 +76,9 @@
           <button id="learn-more-btn">Learn More</button>
         </div>
       </div>
-      <div class="vh90">
-        <h1>More Info</h1>
+      <!-- More about ChildWatch -->
+      <div class="more-page vh90">
+        <h1>Why we formed</h1>
       </div>
 
     <script defer src="./main.js"></script>
