change mobile button size

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <div class="hero-bottom">
         <div class="hero-bottom-left">
-          <p class="text-header">About us</p>
+          <p class="text-header">About Us</p>
           <p class="text-body">
             ChildWatch is an all volunteer non-profit self-funded action group of concerned parents, initially fathers, serving the citizens of Bermuda and Bermudian overseas. Our aim is to effect change in the laws, and society's views
             on the rights of single and divorced fathers, to actively share in
