change mobile button size

--- a/newindex.html
+++ b/newindex.html
@@ -30,6 +30,7 @@
           <li>Contact us</li>
         </ul>
       </div>
+      <div class="hamburger-menu"><img src="img/hamburger.svg" alt="" /></div>
     </div>
   </div>
 
