--- a/newindex.html
+++ b/newindex.html
@@ -11,13 +11,9 @@
   <div class="fixed-header">
     <div class="fixed-header-wrapper">
       <div class="title-and-image">
-        <!-- <h1>ChildWatch<br />Bermuda</h1> -->
-        <!-- <div class="map"> -->
         <div>
-          <img width="125" src="img/bermudamap.svg" alt="" />
+          <img class="map" src="img/bermudamap.svg" alt="" />
         </div>
-
-        <!-- </div> -->
         <div class="child-pic">
           <img src="img/hero-image.svg" alt="" />
         </div>
