change mobile button size

--- a/newindex.html
+++ b/newindex.html
@@ -18,9 +18,9 @@
           <img src="img/hero-image.svg" alt="" />
         </div>
       </div>
-      <div>
-        <ul class="menu-items">
-          <li>Home</li>
+      <div class="menu-items-container">
+        <ul id="menu_items" class="menu-items">
+          <li class="item active">Home</li>
           <li>Objectives</li>
           <li>Research</li>
           <li>Contact us</li>
