change mobile button size

--- a/newindex.html
+++ b/newindex.html
@@ -30,6 +30,10 @@
     </div>
   </div>
 
+  <div class="main-content">
+    <h1>Main Section</h1>
+  </div>
+
   <body>
     <script defer src="./main.js"></script>
   </body>
