--- a/newindex.html
+++ b/newindex.html
@@ -7,34 +7,41 @@
     <title>Childwatch | Home</title>
     <link rel="stylesheet" href="css/newstyles.css" />
   </head>
-
-  <div class="fixed-header">
-    <div class="fixed-header-wrapper">
-      <div class="title-and-image">
-        <div>
-          <img class="map" src="img/bermudamap.svg" alt="" />
-        </div>
-        <div class="child-pic">
-          <img src="img/hero-image.svg" alt="" />
-        </div>
-      </div>
-      <div class="menu-items-container">
-        <ul id="menu_items" class="menu-items">
-          <li class="item active">Home</li>
-          <li>Objectives</li>
-          <li>Research</li>
-          <li>Contact us</li>
-        </ul>
-      </div>
-      <div class="hamburger-menu"><img src="img/hamburger.svg" alt="" /></div>
-    </div>
-  </div>
-
-  <div class="main-content">
-    <h1>Main Section</h1>
-  </div>
-
   <body>
+    <div class="fixed-header">
+      <div class="fixed-header-wrapper">
+        <div class="title-and-image">
+          <div>
+            <img class="map" src="img/bermudamap.svg" alt="" />
+          </div>
+          <div class="child-pic">
+            <img src="img/hero-image.svg" alt="" />
+          </div>
+        </div>
+        <div class="menu-items-container">
+          <ul id="menu_items" class="menu-items">
+            <li class="item active">Home</li>
+            <li>Objectives</li>
+            <li>Research</li>
+            <li>Contact us</li>
+          </ul>
+        </div>
+        <div class="hamburger-menu"><img src="img/hamburger.svg" alt="" /></div>
+      </div>
+    </div>
+
+    <div class="main-content">
+      <div class="row">
+        <div class="section-heading"><h1>About 1</h1></div>
+        <div class="row">
+          <div class="section-body">Hello 1</div>
+        </div>
+
+        <div class="section-heading"><h1>About 1</h1></div>
+        <!-- <div class="section-body">Hello 1</div> -->
+      </div>
+    </div>
+
     <script defer src="./main.js"></script>
   </body>
 </html>
